--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -5,8 +5,10 @@
 {% block content %}
 <h1 id="home_title">PWTOOL</h1>
 <div id="home_box">
-    <p>Welcome to the PWtool official website.</p>
-    <p>Below you can download out latest release!</p>
+    <div id="txt_box">
+        <p>Welcome to the PWtool official website.</p>
+        <p>Below you can download our latest release!</p>
+    </div>
     <div id="d_load"><a href="/download">DOWNLOAD</a></div>
 </div>
 {% endblock %}
